--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graphics Developer Portfolio</title>
+    <title>Victor Berdugo – Portfolio</title>
     <style>
         * {
             margin: 0;
@@ -523,10 +523,10 @@
                 <h2 class="section-title">Let's Connect</h2>
                 <p class="tagline">Looking for opportunities to grow professionally and apply my skills in real-world projects</p>
                 <div class="contact-buttons">
-                    <a href="mailto:youremail@example.com" class="btn">📧 Email</a>
-                    <a href="https://github.com/yourusername" class="btn">💻 GitHub</a>
-                    <a href="https://linkedin.com/in/yourusername" class="btn">💼 LinkedIn</a>
-                    <a href="https://play.google.com/store/apps/developer?id=YourName" class="btn">🎮 Play Store</a>
+                    <a href="mailto:victorberdugo1@gmail.com" class="btn">📧 Email</a>
+                    <a href="https://github.com/victorberdugo1" class="btn">💻 GitHub</a>
+                    <a href="https://www.linkedin.com/in/victor-augusto-berdugo-garc%C3%ADa-9a35b9313/" class="btn">💼 LinkedIn</a>
+                    <a href="https://play.google.com/store/apps/developer?id=Victor+Berdugo" class="btn">🎮 Play Store</a>
                 </div>
             </div>
         </section>
