--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 
     <div class="container">
         <header>
-            <h1>Graphics Programmer</h1>
+            <h1>Victor Berdugo – Portfolio</h1>
             <p class="subtitle">42 School Student | Game Developer | AI Enthusiast</p>
             <p class="tagline">Passionate about graphics programming, game development, and bringing visual concepts to life through code. Experienced in 3D modeling, AI integration, and creating immersive interactive experiences.</p>
         </header>
