--- a/index.html
+++ b/index.html
@@ -394,17 +394,19 @@ h1::after {
         <section class="section">
             <h2 class="section-title">Projects</h2>
             <div class="projects-grid">
-                <a href="https://github.com/victorberdugo1" class="project-card" target="_blank">
-                    <div class="project-icon">🔗</div>
-                    <h3 class="project-title">View All My Projects</h3>
-                    <p class="project-description">Check out my complete portfolio of projects on GitHub, including detailed documentation, source code, and demos of my work in graphics programming, game development, and AI.</p>
-                    <div class="tech-stack">
-                        <span class="tech-tag">GitHub</span>
-                        <span class="tech-tag">Open Source</span>
-                        <span class="tech-tag">Documentation</span>
-                    </div>
+                <a href="https://victorberdugo1.github.io/trymith.html" class="project-card" target="_blank">
+                <div class="project-icon">📱</div>
+                <h3 class="project-title">TryMyth – Ley Lines Explorer</h3>
+                <p class="project-description">
+                Discover the hidden network of energy that connects the world’s most mysterious places. Explore pyramids, temples, stone circles, and ancient ruins with an interactive map, GPS points, and mystical insights into sacred geometry.
+                </p>
+                <div class="tech-stack">
+                    <span class="tech-tag">Web App</span>
+                    <span class="tech-tag">HTML/CSS/JS</span>
+                    <span class="tech-tag">Interactive Map</span>
+                    <span class="tech-tag">Mystical Exploration</span>
+                </div>
                 </a>
-
                 <div class="project-card">
                     <div class="project-icon">🎮</div>
                     <h3 class="project-title">Published Games on Play Store</h3>
