--- a/trymith.html
+++ b/trymith.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 <head>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
@@ -22,9 +22,10 @@
       padding: 5px;
       background-color: #1a1a1a;
       transition: all 0.3s ease;
-    }
-    #controls-top.hidden {
       display: none;
+    }
+    #controls-top.visible {
+      display: block;
     }
     #toggle-controls {
       width: 100%;
@@ -92,6 +93,156 @@
       flex: 1;
       min-width: 0;
     }
+    #app-banner {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      width: 320px;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      border-radius: 16px;
+      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
+      padding: 20px;
+      z-index: 2000;
+      animation: slideIn 0.5s ease-out;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+    }
+    #app-banner.hidden {
+      display: none;
+    }
+    @keyframes slideIn {
+      from {
+        transform: translateX(400px);
+        opacity: 0;
+      }
+      to {
+        transform: translateX(0);
+        opacity: 1;
+      }
+    }
+    .banner-close {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: rgba(255, 255, 255, 0.2);
+      border: none;
+      color: white;
+      width: 28px;
+      height: 28px;
+      border-radius: 50%;
+      cursor: pointer;
+      font-size: 18px;
+      line-height: 1;
+      transition: background 0.3s ease;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .banner-close:hover {
+      background: rgba(255, 255, 255, 0.3);
+    }
+    .banner-header {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+      margin-bottom: 15px;
+    }
+.banner-icon {
+  width: 68px;
+  height: 68px;
+  background: white; /* o 'transparent' si no quieres fondo blanco */
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.12);
+  overflow: hidden;
+  flex-shrink: 0;
+}
+
+.banner-icon-img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain; /* muestra todo el icono sin recortarlo */
+  display: block;
+}
+
+    }
+    .banner-title {
+      flex: 1;
+    }
+    .banner-title h3 {
+      margin: 0;
+      color: white;
+      font-size: 18px;
+      font-weight: 700;
+      line-height: 1.2;
+    }
+    .banner-title p {
+      margin: 4px 0 0 0;
+      color: rgba(255, 255, 255, 0.9);
+      font-size: 13px;
+      font-weight: 500;
+    }
+    .banner-content {
+      color: rgba(255, 255, 255, 0.95);
+      font-size: 14px;
+      line-height: 1.5;
+      margin-bottom: 15px;
+    }
+    .banner-features {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      margin-bottom: 15px;
+    }
+    .feature-item {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      color: white;
+      font-size: 13px;
+    }
+    .feature-icon {
+      width: 20px;
+      height: 20px;
+      background: rgba(255, 255, 255, 0.2);
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 12px;
+      flex-shrink: 0;
+    }
+.banner-button {
+  display: inline-flex;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px 12px;
+  border-radius: 10px;
+  background: #fff;
+  color: #667eea;
+  font-weight: 700;
+  text-decoration: none;
+  cursor: pointer;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  justify-content: center;
+  min-width: 0;
+}
+    .banner-button:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+    }
+    .banner-button:active {
+      transform: translateY(0);
+    }
+    .playstore-icon {
+      width: 24px;
+      height: 24px;
+    }
     @media (max-width: 768px) {
       .control-row {
         font-size: 11px;
@@ -107,6 +258,12 @@
       .control-row button {
         padding: 3px 8px;
         font-size: 11px;
+      }
+      #app-banner {
+        width: calc(100% - 40px);
+        right: 20px;
+        left: 20px;
+        top: 10px;
       }
     }
     @media print {
@@ -219,7 +376,6 @@
       img.src = nombreImagen;
       textoTitulo.textContent = titulo || '';
       
-      // Guardar coordenadas en el overlay para usarlas al hacer clic
       overlay.setAttribute('data-lat', lat);
       overlay.setAttribute('data-lng', lng);
       
@@ -251,12 +407,10 @@
       var isAndroidApp = isAndroid && isWebView;
 
       if (isAndroidApp) {
-        // En app Android, usar geo: URL
         var geoUrl = 'geo:' + lat + ',' + lng + '?z=15';
         window.location.href = geoUrl;
         console.log('Abriendo Google Maps nativo (app): ' + geoUrl);
       } else {
-        // En navegador web, abrir Google Maps en nueva pestaña
         var mapsUrl = 'https://www.google.com/maps?q=' + lat + ',' + lng + '&z=15';
         window.open(mapsUrl, '_blank');
         console.log('Abriendo Google Maps web: ' + mapsUrl);
@@ -792,15 +946,19 @@
         var btn = document.getElementById('toggle-controls');
         var container = document.getElementById('toggle-container');
 
-        if (controls.classList.contains('hidden')) {
-          controls.classList.remove('hidden');
-          btn.textContent = '▲ Hide Controls';
-          container.classList.add('with-controls');
-        } else {
-          controls.classList.add('hidden');
+        if (controls.classList.contains('visible')) {
+          controls.classList.remove('visible');
           btn.textContent = '▼ Show Controls';
           container.classList.remove('with-controls');
+        } else {
+          controls.classList.add('visible');
+          btn.textContent = '▲ Hide Controls';
+          container.classList.add('with-controls');
         }
+      });
+
+      document.getElementById('close-banner').addEventListener('click', function() {
+        document.getElementById('app-banner').classList.add('hidden');
       });
 
       console.log('Mapa inicializado correctamente');
@@ -908,7 +1066,46 @@
   </script>
 </head>
 <body onload="init()">
-<div id="toggle-container" class="with-controls">
+<div id="app-banner">
+  <button class="banner-close" id="close-banner">×</button>
+  <div class="banner-header">
+<div class="banner-icon" aria-hidden="true">
+  <img class="banner-icon-img" src="https://play-lh.googleusercontent.com/u8L1KYfyIxnVJyJ4iNs5kkTYTtwiS1B_lsZ0KiET_3OezY9j1GSWr3PZMAFN2i1zeea4te6GWAD7tqnISgkB=w240-h480-rw" alt="Icono Trilateración">
+</div>
+
+    <div class="banner-title">
+      <h3>TryMyth App</h3>
+      <p>Available on Android</p>
+    </div>
+  </div>
+<div class="banner-content">
+  Discover the hidden network of ley lines and explore mystical sites with interactive maps, ancient alignments, and GPS navigation.
+</div>
+  <div class="banner-features">
+    <div class="feature-item">
+      <span class="feature-icon">✓</span>
+      <span>Interactive world map of ley lines</span>
+    </div>
+    <div class="feature-item">
+      <span class="feature-icon">✓</span>
+      <span>Explore pyramids, temples and ancient ruins</span>
+    </div>
+    <div class="feature-item">
+      <span class="feature-icon">✓</span>
+      <span>Interactive 3-point trilateration intersection zones</span>
+    </div>
+  </div>
+
+<a href="https://play.google.com/store/apps/details?id=com.Berdugo.trilateracion" target="_blank" class="banner-button" rel="noopener noreferrer">
+  <!-- svg o <img> que ya tienes -->
+  <svg class="playstore-icon" viewBox="0 0 24 24" fill="currentColor">
+    <path d="M3,20.5V3.5C3,2.91 3.34,2.39 3.84,2.15L13.69,12L3.84,21.85C3.34,21.6 3,21.09 3,20.5M16.81,15.12L6.05,21.34L14.54,12.85L16.81,15.12M20.16,10.81C20.5,11.08 20.75,11.5 20.75,12C20.75,12.5 20.53,12.9 20.18,13.18L17.89,14.5L15.39,12L17.89,9.5L20.16,10.81M6.05,2.66L16.81,8.88L14.54,11.15L6.05,2.66Z"/>
+  </svg>
+  <span class="banner-button-label">Download on Play Store</span>
+</a>
+
+</div>
+<div id="toggle-container">
   <div id="container">
     <div id="controls-top">
       <div class="control-row" style="color: #FFFFFF; position: relative;">
@@ -955,12 +1152,12 @@
 
       <div id="autocomplete-list-coords"></div>
     </div>
-    <button id="toggle-controls">▲ Hide Controls</button>
+    <button id="toggle-controls">▼ Show Controls</button>
     <div id="mapa"></div>
   </div>
 </div>
-<div id="imagen-overlay" onclick="ocultarImagen()" onclick="event.stopPropagation()">
-  <div id="imagen-container" >
+<div id="imagen-overlay" onclick="ocultarImagen()">
+  <div id="imagen-container" onclick="event.stopPropagation()">
     <img id="imagen-display" src="" alt="Imagen del punto" onclick="abrirEnGoogleMaps(event)">
     <p id="imagen-titulo"></p>
     <button id="btn-abrir-maps" onclick="abrirEnGoogleMaps(event)">Open in Google Maps</button>
