--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Victor Berdugo – Portfolio</title>
+    <title>Victor Berdugo — Portfolio</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #0a0e27, #1a1f3a, #0f1729);
+            background: linear-gradient(180deg, #060817 0%, #111633 40%, #1a4e74 100%);
             color: #fff;
             overflow-x: hidden;
         }
@@ -129,19 +129,113 @@
         .skill-list li { padding: 10px 0; border-bottom: 1px solid rgba(255,255,255,0.1); color:#b3b3b3; }
         .skill-list li:last-child { border-bottom:none; }
 
-        .education-section { background: rgba(255,255,255,0.03); backdrop-filter: blur(10px); border-radius:20px; border:1px solid rgba(255,255,255,0.1); padding:40px; margin:40px 0; }
+        .education-section { 
+            background: rgba(255,255,255,0.05); 
+            backdrop-filter: blur(10px); 
+            border-radius:20px; 
+            border:1px solid rgba(255,255,255,0.1); 
+            padding:40px; 
+            margin:40px 0; 
+        }
         .education-item { display:flex; align-items:center; gap:20px; margin-bottom:30px; }
         .education-logo { font-size:3em; }
         .education-content h3 { color:#00d4ff; font-size:1.5em; margin-bottom:10px; }
 
-        .passion-section { background: linear-gradient(135deg, rgba(0,153,255,0.1), rgba(0,212,255,0.05)); backdrop-filter: blur(10px); border-radius:20px; border:2px solid rgba(0,212,255,0.3); padding:50px; margin:60px 0; text-align:center; }
+        .passion-section { 
+            background: linear-gradient(135deg, rgba(0,153,255,0.1), rgba(0,212,255,0.05)); 
+            backdrop-filter: blur(10px); 
+            border-radius:20px; 
+            border:2px solid rgba(0,212,255,0.3); 
+            padding:50px; 
+            margin:60px 0; 
+            text-align:center; 
+        }
         .passion-section h2 { font-size:2.5em; margin-bottom:20px; color:#00d4ff; }
         .passion-section p { font-size:1.2em; line-height:1.8; color:#e0e0e0; max-width:800px; margin:0 auto; }
 
-        .contact-section { text-align:center; padding:60px 20px; background: rgba(255,255,255,0.03); backdrop-filter: blur(10px); border-radius:20px; border:1px solid rgba(255,255,255,0.1); }
+.contact-section {
+    background: rgba(255,255,255,0.05);
+    backdrop-filter: blur(10px);
+    border-radius: 20px;
+    border: 1px solid rgba(255,255,255,0.1);
+    padding: 50px 40px;
+    margin: 60px 0 0 0;
+    text-align: center;
+    position: relative;
+    z-index: 2;                /* por encima de las montañas, por debajo de la hierba */
+}
+        
         .contact-buttons { display:flex; justify-content:center; gap:20px; margin-top:30px; flex-wrap:wrap; }
-        .btn { padding: 15px 40px; border: 2px solid #00d4ff; background: transparent; color: #00d4ff; font-size:1em; border-radius:50px; cursor:pointer; transition:all .3s ease; text-decoration:none; display:inline-block; }
-        .btn:hover { background:#00d4ff; color:#0a0e27; transform: scale(1.05); box-shadow: 0 10px 30px rgba(0,212,255,0.4); }
+        .btn { 
+            padding: 15px 40px; 
+            border: 2px solid #00d4ff; 
+            background: transparent; 
+            color: #00d4ff; 
+            font-size:1em; 
+            border-radius:50px; 
+            cursor:pointer; 
+            transition:all .3s ease; 
+            text-decoration:none; 
+            display:inline-block; 
+        }
+        .btn:hover { 
+            background:#00d4ff; 
+            color:#0a0e27; 
+            transform: scale(1.05); 
+            box-shadow: 0 10px 30px rgba(0,212,255,0.4); 
+        }
+
+        /* Parallax Container */
+.parallax-container {
+    position: relative;
+    width: 100%;
+    height: 220px;
+    overflow: visible;         /* permitir que la hierba sobresalga y quede delante */
+    margin-top: -220px;        /* ajusta cuánto sube para tocar la sección de contacto */
+    z-index: 0; 
+}
+
+.parallax-mountains {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 200%;
+    height: 156px;
+    background: url('mountains.png') repeat-x 0 0;
+    z-index: 1;                /* fondo */
+    animation: mountains-drift 1000s linear infinite;
+    pointer-events: none;      /* no interfiere con clics */
+}
+
+/* Hierba: delante (por encima de la sección de contacto) */
+.parallax-grass {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 200%;
+    height: 70px;
+    background: url('grass.png') repeat-x left 10px;
+    z-index: 3;                /* frontal */
+    animation: grass-drift 500s linear infinite;
+    pointer-events: none;      /* importante: deja pasar los clics a los botones */
+}
+
+
+
+        @keyframes mountains-drift {
+            0% { transform: translateX(0); }
+            100% { transform: translateX(-50%); }
+        }
+
+        @keyframes grass-drift {
+            0% { transform: translateX(0); }
+            100% { transform: translateX(-50%); }
+        }
+
+        @keyframes grass-wave {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-2px); }
+        }
 
         @media (max-width: 768px) {
             h1 { font-size: 2.5em; }
@@ -153,6 +247,9 @@
             .passion-section h2 { font-size: 2em; }
             .passion-section p { font-size: 1em; }
             .project-icon { width: 48px; height: 48px; font-size: 24px; }
+            .parallax-container { height: 180px; }
+            .parallax-mountains { height: 120px; }
+            .parallax-grass { height: 50px; }
         }
     </style>
 </head>
@@ -200,9 +297,9 @@
                         loading="lazy"
                       />
                     </div>
-                    <h3 class="project-title">TryMyth – Ley Lines Explorer</h3>
+                    <h3 class="project-title">TryMyth — Ley Lines Explorer</h3>
                     <p class="project-description">
-                    Discover the hidden network of energy that connects the world’s most mysterious places. Explore pyramids, temples, stone circles, and ancient ruins with an interactive map, GPS points, and mystical insights into sacred geometry.
+                    Discover the hidden network of energy that connects the world's most mysterious places. Explore pyramids, temples, stone circles, and ancient ruins with an interactive map, GPS points, and mystical insights into sacred geometry.
                     </p>
                     <div class="tech-stack">
                         <span class="tech-tag">Web App</span>
@@ -409,7 +506,13 @@
         </section>
     </div>
 
+    <div class="parallax-container">
+        <div class="parallax-mountains"></div>
+        <div class="parallax-grass"></div>
+    </div>
+
     <script>
+        // Particle animation
         var WIDTH = window.innerWidth;
         var HEIGHT = window.innerHeight;
         var canvas = document.getElementById('pixie');
