Modify contact links for security and usability
Updated contact links to open in new tab and added rel attributes for security.

--- a/index.html
+++ b/index.html
@@ -501,9 +501,9 @@
                 <p class="tagline">Looking for opportunities to grow professionally and apply my skills in real-world projects</p>
                 <div class="contact-buttons">
                     <a href="mailto:victorberdugo1@gmail.com" class="btn">📧 Email</a>
-                    <a href="https://github.com/victorberdugo1" class="btn">💻 GitHub</a>
-                    <a href="https://www.linkedin.com/in/victor-augusto-berdugo-garc%C3%ADa-9a35b9313/" class="btn">💼 LinkedIn</a>
-                    <a href="https://play.google.com/store/apps/developer?id=Victor+Berdugo" class="btn">🎮 Play Store</a>
+                    <a href="https://github.com/victorberdugo1" class="btn" target="_blank" rel="noopener noreferrer">💻 GitHub</a>
+                    <a href="https://www.linkedin.com/in/victor-augusto-berdugo-garc%C3%ADa-9a35b9313/" class="btn" target="_blank" rel="noopener noreferrer">💼 LinkedIn</a>
+                    <a href="https://play.google.com/store/apps/developer?id=Victor+Berdugo" class="btn" target="_blank" rel="noopener noreferrer">🎮 Play Store</a>
                 </div>
             </div>
         </section>
