--- a/index.html
+++ b/index.html
@@ -286,122 +286,122 @@
             </div>
         </section>
 
-        <section class="section">
-            <h2 class="section-title">Projects</h2>
-            <div class="projects-grid">
-                <a href="https://victorberdugo1.github.io/trymith.html" class="project-card" target="_blank">
-                    <div class="project-icon" aria-hidden="false">
-                      <img
-                        src="https://play-lh.googleusercontent.com/u8L1KYfyIxnVJyJ4iNs5kkTYTtwiS1B_lsZ0KiET_3OezY9j1GSWr3PZMAFN2i1zeea4te6GWAD7tqnISgkB=w240-h480-rw"
-                        alt="TryMyth Play Store icon"
-                        class="project-icon-img"
-                        width="56"
-                        height="56"
-                        loading="lazy"
-                      />
-                    </div>
-                    <h3 class="project-title">TryMyth — Ley Lines Explorer</h3>
-                    <p class="project-description">
-                    Discover the hidden network of energy that connects the world's most mysterious places. Explore pyramids, temples, stone circles, and ancient ruins with an interactive map, GPS points, and mystical insights into sacred geometry.
-                    </p>
-                    <div class="tech-stack">
-                        <span class="tech-tag">Web App</span>
-                        <span class="tech-tag">HTML/CSS/JS</span>
-                        <span class="tech-tag">Interactive Map</span>
-                        <span class="tech-tag">Mystical Exploration</span>
-                    </div>
-                </a>
+<h2 class="section-title">Projects</h2>
+<div class="projects-grid">
 
-                <div class="project-card">
-                    <div class="project-icon" aria-hidden="false" title="Google Play / Android">
-                        <svg role="img" aria-label="Play Store icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet">
-                          <defs>
-                            <linearGradient id="playGradUnified" x1="0" y1="0" x2="1" y2="1">
-                              <stop offset="0%" stop-color="#34A853"/>
-                              <stop offset="33%" stop-color="#FBBC05"/>
-                              <stop offset="66%" stop-color="#EA4335"/>
-                              <stop offset="100%" stop-color="#4285F4"/>
-                            </linearGradient>
-                            <linearGradient id="playGloss" x1="0" y1="0" x2="0" y2="1">
-                              <stop offset="0%" stop-color="rgba(255,255,255,0.22)"/>
-                              <stop offset="100%" stop-color="rgba(255,255,255,0)"/>
-                            </linearGradient>
-                          </defs>
+  <a href="https://victorberdugo1.github.io/trymith.html" class="project-card" target="_blank" rel="noopener noreferrer" title="TryMyth — Ley Lines Explorer">
+    <div class="project-icon" aria-hidden="false">
+      <img
+        src="https://play-lh.googleusercontent.com/u8L1KYfyIxnVJyJ4iNs5kkTYTtwiS1B_lsZ0KiET_3OezY9j1GSWr3PZMAFN2i1zeea4te6GWAD7tqnISgkB=w240-h480-rw"
+        alt="TryMyth Play Store icon"
+        class="project-icon-img"
+        width="56"
+        height="56"
+        loading="lazy"
+      />
+    </div>
+    <h3 class="project-title">TryMyth — Ley Lines Explorer</h3>
+    <p class="project-description">
+      Discover the hidden network of energy that connects the world's most mysterious places. Explore pyramids, temples, stone circles, and ancient ruins with an interactive map, GPS points, and mystical insights into sacred geometry.
+    </p>
+    <div class="tech-stack">
+      <span class="tech-tag">Web App</span>
+      <span class="tech-tag">HTML/CSS/JS</span>
+      <span class="tech-tag">Interactive Map</span>
+      <span class="tech-tag">Mystical Exploration</span>
+    </div>
+  </a>
 
-                          <path d="M3,20.5V3.5C3,2.91 3.34,2.39 3.84,2.15L13.69,12L3.84,21.85C3.34,21.6 3,21.09 3,20.5M16.81,15.12L6.05,21.34L14.54,12.85L16.81,15.12M20.16,10.81C20.5,11.08 20.75,11.5 20.75,12C20.75,12.5 20.53,12.9 20.18,13.18L17.89,14.5L15.39,12L17.89,9.5L20.16,10.81M6.05,2.66L16.81,8.88L14.54,11.15L6.05,2.66Z"
-                                fill="url(#playGradUnified)"></path>
+  <a href="https://play.google.com/store/apps/developer?id=Victor+Berdugo" class="project-card" target="_blank" rel="noopener noreferrer" title="Android & Play Store Apps">
+    <div class="project-icon" aria-hidden="false" title="Google Play / Android">
+      <svg role="img" aria-label="Play Store icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet">
+        <defs>
+          <linearGradient id="playGradUnified" x1="0" y1="0" x2="1" y2="1">
+            <stop offset="0%" stop-color="#34A853"/>
+            <stop offset="33%" stop-color="#FBBC05"/>
+            <stop offset="66%" stop-color="#EA4335"/>
+            <stop offset="100%" stop-color="#4285F4"/>
+          </linearGradient>
+          <linearGradient id="playGloss" x1="0" y1="0" x2="0" y2="1">
+            <stop offset="0%" stop-color="rgba(255,255,255,0.22)"/>
+            <stop offset="100%" stop-color="rgba(255,255,255,0)"/>
+          </linearGradient>
+        </defs>
 
-                          <path d="M6.05,2.66L14.54,11.15L16.81,8.88L6.05,2.66Z" fill="url(#playGloss)" opacity="0.25"></path>
-                        </svg>
-                    </div>
+        <path d="M3,20.5V3.5C3,2.91 3.34,2.39 3.84,2.15L13.69,12L3.84,21.85C3.34,21.6 3,21.09 3,20.5M16.81,15.12L6.05,21.34L14.54,12.85L16.81,15.12M20.16,10.81C20.5,11.08 20.75,11.5 20.75,12C20.75,12.5 20.53,12.9 20.18,13.18L17.89,14.5L15.39,12L17.89,9.5L20.16,10.81M6.05,2.66L16.81,8.88L14.54,11.15L6.05,2.66Z"
+              fill="url(#playGradUnified)"></path>
 
-                    <h3 class="project-title">Android & Play Store Apps</h3>
+        <path d="M6.05,2.66L14.54,11.15L16.81,8.88L6.05,2.66Z" fill="url(#playGloss)" opacity="0.25"></path>
+      </svg>
+    </div>
 
-                    <p class="project-description">
-                        Development and publishing of mobile products for Android — from native apps to full Unity games. 
-                        Experience includes native Kotlin/Java apps (MVVM, Android SDK, architecture), Unity game development (C#), 
-                        Play Store deployment, ad integration, in-app purchases, and release management.
-                    </p>
+    <h3 class="project-title">Android & Play Store Apps</h3>
 
-                    <div class="tech-stack">
-                      <span class="tech-tag">Unity</span>
-                      <span class="tech-tag">C#</span>
-                      <span class="tech-tag">Kotlin</span>
-                      <span class="tech-tag">Android</span>
-                      <span class="tech-tag">Google Play</span>
-                      <span class="tech-tag">In-App Purchases</span>
-                    </div>
-                </div>
+    <p class="project-description">
+      Development and publishing of mobile products for Android — from native apps to full Unity games. 
+      Experience includes native Kotlin/Java apps (MVVM, Android SDK, architecture), Unity game development (C#), 
+      Play Store deployment, ad integration, in-app purchases, and release management.
+    </p>
 
-                <div class="project-card">
-                    <div class="project-icon">🕹️</div>
-                    <h3 class="project-title">Games with Raylib</h3>
-                    <p class="project-description">Game development using Raylib library in C/C++. Implementation of physics engines, collision detection, 2D graphics rendering, and resource management to create smooth and engaging gaming experiences.</p>
-                    <div class="tech-stack">
-                        <span class="tech-tag">C/C++</span>
-                        <span class="tech-tag">Raylib</span>
-                        <span class="tech-tag">OpenGL</span>
-                        <span class="tech-tag">Game Physics</span>
-                    </div>
-                </div>
+    <div class="tech-stack">
+      <span class="tech-tag">Unity</span>
+      <span class="tech-tag">C#</span>
+      <span class="tech-tag">Kotlin</span>
+      <span class="tech-tag">Android</span>
+      <span class="tech-tag">Google Play</span>
+      <span class="tech-tag">In-App Purchases</span>
+    </div>
+  </a>
 
-                <div class="project-card">
-                    <div class="project-icon">🤖</div>
-                    <h3 class="project-title">AI & Computer Vision Projects</h3>
-                    <p class="project-description">Implementation of AI models using TensorFlow, OpenPose for pose estimation, and ControlNet for image generation. Experience with neural networks, computer vision, and real-time AI processing.</p>
-                    <div class="tech-stack">
-                        <span class="tech-tag">TensorFlow</span>
-                        <span class="tech-tag">OpenPose</span>
-                        <span class="tech-tag">ControlNet</span>
-                        <span class="tech-tag">Python</span>
-                    </div>
-                </div>
+  <a href="https://github.com/victorberdugo1/RayPuppet-Animator" class="project-card" target="_blank" rel="noopener noreferrer" title="Games with Raylib">
+    <div class="project-icon">🕹️</div>
+    <h3 class="project-title">Games with Raylib</h3>
+    <p class="project-description">Game development using Raylib library in C/C++. Implementation of physics engines, collision detection, 2D graphics rendering, and resource management to create smooth and engaging gaming experiences.</p>
+    <div class="tech-stack">
+      <span class="tech-tag">C/C++</span>
+      <span class="tech-tag">Raylib</span>
+      <span class="tech-tag">OpenGL</span>
+      <span class="tech-tag">Game Physics</span>
+    </div>
+  </a>
 
-                <div class="project-card">
-                    <div class="project-icon">🎨</div>
-                    <h3 class="project-title">3D Modeling & Animation</h3>
-                    <p class="project-description">Creation of 3D assets and environments using 3ds Max, texture and image editing with Photoshop, and motion graphics with After Effects. Complete pipeline from modeling to final rendering.</p>
-                    <div class="tech-stack">
-                        <span class="tech-tag">3ds Max</span>
-                        <span class="tech-tag">Photoshop</span>
-                        <span class="tech-tag">After Effects</span>
-                        <span class="tech-tag">3D Modeling</span>
-                    </div>
-                </div>
+  <a href="https://github.com/victorberdugo1/video2openposejson" class="project-card" target="_blank" rel="noopener noreferrer" title="AI & Computer Vision Projects">
+    <div class="project-icon">🤖</div>
+    <h3 class="project-title">AI & Computer Vision Projects</h3>
+    <p class="project-description">Implementation of AI models using TensorFlow, OpenPose for pose estimation, and ControlNet for image generation. Experience with neural networks, computer vision, and real-time AI processing.</p>
+    <div class="tech-stack">
+      <span class="tech-tag">TensorFlow</span>
+      <span class="tech-tag">OpenPose</span>
+      <span class="tech-tag">ControlNet</span>
+      <span class="tech-tag">Python</span>
+    </div>
+  </a>
 
-                <div class="project-card">
-                    <div class="project-icon">💻</div>
-                    <h3 class="project-title">42 School Projects</h3>
-                    <p class="project-description">Multiple completed projects at 42 School including recreation of C standard library functions, memory management, complex data structures, sorting algorithms, and low-level system programming.</p>
-                    <div class="tech-stack">
-                        <span class="tech-tag">C</span>
-                        <span class="tech-tag">Algorithms</span>
-                        <span class="tech-tag">Unix</span>
-                        <span class="tech-tag">Git</span>
-                    </div>
-                </div>
+  <a href="https://sketchfab.com/victorberdugo1" class="project-card" target="_blank" rel="noopener noreferrer" title="3D Modeling & Animation">
+    <div class="project-icon">🎨</div>
+    <h3 class="project-title">3D Modeling & Animation</h3>
+    <p class="project-description">Creation of 3D assets and environments using 3ds Max, texture and image editing with Photoshop, and motion graphics with After Effects. Complete pipeline from modeling to final rendering.</p>
+    <div class="tech-stack">
+      <span class="tech-tag">3ds Max</span>
+      <span class="tech-tag">Photoshop</span>
+      <span class="tech-tag">After Effects</span>
+      <span class="tech-tag">3D Modeling</span>
+    </div>
+  </a>
 
-            </div>
+  <a href="https://github.com/victorberdugo1/cub3d" class="project-card" target="_blank" rel="noopener noreferrer" title="42 School Projects">
+    <div class="project-icon">💻</div>
+    <h3 class="project-title">42 School Projects</h3>
+    <p class="project-description">Multiple completed projects at 42 School including recreation of C standard library functions, memory management, complex data structures, sorting algorithms, and low-level system programming.</p>
+    <div class="tech-stack">
+      <span class="tech-tag">C</span>
+      <span class="tech-tag">Algorithms</span>
+      <span class="tech-tag">Unix</span>
+      <span class="tech-tag">Git</span>
+    </div>
+  </a>
+
+</div>
         </section>
 
         <section class="section">
